2022-10-28T16:21:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3346933173 # 562
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 223 409 / 237 434
* notice: next accum: outdated-unq outdated-all / unq all: 224 410 / 238 435
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-14] / [2022-10-28]

2022-10-28T01:46:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3342188515 # 560
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 222 407 / 236 432
* notice: next accum: outdated-unq outdated-all / unq all: 223 409 / 237 434
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-13] / [2022-10-27]

2022-10-27T08:21:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3335714323 # 558
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 222 407 / 236 433
* notice: next accum: outdated-unq outdated-all / unq all: 222 407 / 236 432
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-13]

2022-10-27T01:38:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3333848604 # 557
* notice: last 14d: unq all: 2 26
* notice: prev accum: outdated-unq outdated-all / unq all: 222 407 / 236 432
* notice: next accum: outdated-unq outdated-all / unq all: 222 407 / 236 433
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-10-26]

2022-10-26T16:24:27Z: