@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-28T16:21:46Z",
+  "timestamp" : "2022-10-29T01:23:18Z",
   "count_outdated" : 410,
   "uniques_outdated" : 224,
-  "count" : 435,
+  "count" : 436,
   "uniques" : 238,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-10-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
