@@ -1,5 +1,5 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 2,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-10-28T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
