@@ -1,3 +1,11 @@
+2022-10-29T01:23:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3349549273 # 563
+* notice: last 14d: unq all: 2 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 224 410 / 238 435
+* notice: next accum: outdated-unq outdated-all / unq all: 224 410 / 238 436
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-28]
+
 2022-10-28T16:21:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3346933173 # 562
 * notice: last 14d: unq all: 2 25
